code(style): Fixed overflows in the cards

--- a/src/components/card/styles.scss
+++ b/src/components/card/styles.scss
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   background-color: $background;
   border-radius: $border-radius-base;
-  overflow: hidden;
   border: none;
   color: $foreground;
   border: 1px solid $gray-light;
@@ -27,9 +26,12 @@
   padding-bottom: 0px;
 
   // Add ellipsis if header is too wide.
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  .card-header-children-wrapper {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
   // Add spacing between card headers and card wells
   & + .card-well {
@@ -84,6 +86,12 @@
     transform: translate(100%,0px);
   }
 }
+@mixin make-card-loading-wrapper($height: 2px) {
+  max-width: 100%;
+  height: $height;
+  overflow-x: hidden;
+}
+
 @mixin make-card-loading($color: $brand-primary, $percent: 100%, $height: 2px, $indeterminant: false) {
   width: $percent;
   height: $height;
@@ -132,7 +140,7 @@
 .card-well-highlight { @include make-card-well-highlight; }
 
 
-
+.card-loading-wrapper { @include make-card-loading-wrapper; }
 .card-loading { @include make-card-loading; }
 .card-loading-indeterminate { @include make-card-loading($indeterminant: true); }
 .card-dark {
